force-app/main/default/objects/INS_GISBoundaries__c/INS_GISBoundaries__c.object-meta.xml
<CustomObject>
    <label>GIS Boundaries</label>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GIS Boundaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>