force-app/main/default/objects/INS_GISBoundaries__c/fields/INS_BoundaryType__c.field-meta.xml
<CustomField>
    <fullName>INS_BoundaryType__c</fullName>
    <label>Boundary Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Impacted Boundary</fullName>
            </value>
            <value>
                <fullName>Disturbance Boundary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>