force-app/main/default/objects/INS_GISBoundaries__c/fields/INS_CoOrdinates__c.field-meta.xml
<CustomField>
    <fullName>INS_CoOrdinates__c</fullName>
    <label>CoOrdinates</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>