force-app/main/default/objects/INS_GISBoundaries__c/fields/INS_WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>INS_WorkOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>GIS Boundaries</relationshipLabel>
    <relationshipName>GIS_Boundaries</relationshipName>
    <type>Lookup</type>
</CustomField>